# word2vec

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h.in  word2vec.cbp
src/: word2vec.c
